# yadro-tape-task

./: CMakeLists.txt  README.md
src/: main.cpp  tape-algo.cpp  tape-algo.h  tape-utils.cpp  tape-utils.h  tape.cpp  tape.h
tests/: tape-test.cpp
tests/configs/: correct_tape_cfg.txt  incorrect.txt  incorrect_tape_cfg.txt
tests/main_tests/: 1.txt
